--- a/css/break-room.css
+++ b/css/break-room.css
@@ -4,20 +4,25 @@
     0. Project details
     1. CSS Reset
     2. Global styles
-    3. Header and nav
-        -global
-        -sub pages
-    4. Main body content
-        -global
-        -sub pages
-    5. Footer content
-        -global
-        -sub pages
-    6. Forms
-        -sub pages
-    7. Media queries
-        -global
-        -sub pages
+    3. Elements
+        -Typography
+        -Spacing
+        -Links
+        -Buttons
+        -Grid
+        -Forms
+        -Lists
+        -Tables
+        -Images
+        -Helpers
+    4. Components
+        -Navigation
+        -Icons
+        -No Print
+        -
+    5.  Media queries
+ 
+   
 ********************************************/
 
 /********************************************
@@ -89,3 +94,70 @@ img {
 root {
 	/* ************ */
 }
+
+/********************************************
+    3. Elements
+********************************************/
+
+/* Typography
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Spacing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Grid
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Forms
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Lists
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Tables
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Images
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Helpers
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/********************************************
+    4. Components
+********************************************/
+
+/* Navigation
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Icons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* No Print
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+/********************************************
+    5. Components
+********************************************/
+
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
