--- a/css/break-room.css
+++ b/css/break-room.css
@@ -109,6 +109,12 @@ root {
     body {
         font-family: 'Open Sans', sans-serif;
     }
+    h1 { font-size: 4rem;}
+    h2 { font-size: 3.5rem;}
+    h3 { font-size: 3rem;}
+    h4 { font-size: 2.5rem;}
+    h5 { font-size: 2rem;}
+    h6 { font-size: 1.5rem;}
 
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
