--- a/css/break-room.css
+++ b/css/break-room.css
@@ -155,6 +155,7 @@ dd {
 /* Colors
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -170,6 +171,12 @@ dd {
     max-width: 960px;
     margin: 0 auto;
     padding: 0 1.25rem;
+}
+.full-room {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 0;
 }
 .row {
     display: flex;
