--- a/css/break-room.css
+++ b/css/break-room.css
@@ -315,6 +315,12 @@ dd {
 /* Helpers
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+/* Borders */
+
+.border {
+    border: 2px solid;
+}
+
 /********************************************
     4. Components
 ********************************************/
