Add Navigation/ Delete ":root"

--- a/css/break-room.css
+++ b/css/break-room.css
@@ -94,10 +94,6 @@ img {
 /********************************************
     2. Global styles
 ********************************************/
-root {
-	/* ************ */
-
-}
 
 /********************************************
     3. Elements
@@ -351,6 +347,98 @@ dd {
 
 /* Navigation
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+header {
+    z-index: 9999;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: #333;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    opacity: .98;
+
+}
+
+.navbar {
+    height: calc(4rem + 1rem);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 40px;
+    background-color: #333;
+    display: flex;
+    align-items: center;
+    transition: .3s ease;
+}
+
+.navbar a { text-decoration: none; }
+
+.navbar .navbar-logo {
+    color: #fefefe;
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #323437;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease-in-out;
+}
+
+.navigation.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.nav-items {
+    position: relative;
+    background: #fefefe;
+    width: 600px;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transform: translateY(-50px);
+    transition: .3s ease-in-out;
+}
+
+.navigation.active .nav-items{ transform: translateY(0); }
+
+.navbar-toggle {
+    color: #fefefe;
+    cursor: pointer;
+    display: block;
+    font-size: 2em;
+    margin-left: auto;
+}
+
+.navbar-close {
+    cursor: pointer;
+    font-size: 2em;
+    margin: 10px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.nav-items a {
+    color: #333;
+    font-size: 1.5em;
+    font-weight: 550;
+    margin: 15px 50px;
+    text-align: center;
+}
 
 /* Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -370,7 +458,46 @@ dd {
 @media (min-width: 550px) {}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+    .navbar {
+        height: calc(4.3rem + 1rem);
+        max-width: 1250px;
+        padding: 30px 50px;
+    }
+
+    .navigation {
+        position: relative;
+        top: 0;
+        width: fit-content;
+        height: fit-content;
+        margin-left: auto;
+        background-color: transparent;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .nav-items {
+        width: auto;
+        display: flex;
+        flex-direction: row;
+        background-color: transparent;
+        box-shadow: none;
+        padding: 0;
+        transform: translateY(0);
+    }
+
+    .navbar-close, .navbar-toggle { display: none; }
+
+    .navbar .navbar-logo { font-size: 2.3em; }
+
+    .nav-items a {
+        color: #fefefe;
+        font-size: 2em;
+        font-weight: 550;
+        margin: 0 0 0 50px;
+    }
+}
+
 
 /* Desktop */
 @media (min-width: 1000px) {}
