--- a/css/break-room.css
+++ b/css/break-room.css
@@ -442,6 +442,45 @@ header {
 
 /* Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.icon-section {
+    max-width: 900px;
+    color: #333;
+}
+
+.icon-section p {
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+
+.icon-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+    gap: 1.25rem;
+    margin-top: 1.75em;
+}
+
+.icon-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 1px #333;
+    border-radius: 5px;
+    height: 2.5rem;
+    min-width: 2.5rem;
+    font-size: 1rem;
+    padding: 1rem 0;
+    gap: 3px;
+    background-color: #CBD5E0;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.icon { font-size: 1.25rem; }
+
+.icon-list:hover {
+    font-size: 1.1rem;
+    background-color: #EDF2F7;
+    transition: .2s ease;
+}
 
 /* No Print
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
