--- a/css/break-room.css
+++ b/css/break-room.css
@@ -210,11 +210,11 @@ dd {
 /* Shadows
 /* these values have errors need to fix later - Yen??
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.shadows-base { 0 1px 3px 0, rgba(0, 0, 0, 0.1), 0 1px 2px 0, rgba(0, 0, 0, 0.6)}
-.shadows-xs { 0 0 0 1px, rgba(0, 0, 0, 0.5)}
-.shadows-sm { 0 1px 2px 0, rgba(0, 0, 0, 0.5)}
-.shadows-md { 0 4px 6px -1px, rgba(0, 0, 0, 0.1),0 2px 4px -1px, rgba(0, 0, 0, 0.6)}
-.shadows-lg { 0 10px 15px -3px, rgba(0, 0, 0, 0.1),0 4px 6px -2px, rgba(0, 0, 0, 0.5)}
+.shadows-base { 0 1px 3px 0, rgba(0, 0, 0, 0.1), 0 1px 2px 0, rgba(0, 0, 0, 0.6);}
+.shadows-xs { 0 0 0 1px, rgba(0, 0, 0, 0.5);}
+.shadows-sm { 0 1px 2px 0, rgba(0, 0, 0, 0.5);}
+.shadows-md { 0 4px 6px -1px, rgba(0, 0, 0, 0.1),0 2px 4px -1px, rgba(0, 0, 0, 0.6);}
+.shadows-lg { 0 10px 15px -3px, rgba(0, 0, 0, 0.1),0 4px 6px -2px, rgba(0, 0, 0, 0.5);}
 
 
 /* Colors
@@ -223,22 +223,22 @@ dd {
 
 .dark               { color: #050500;}
 .bg-dark            { background-color: #050500;}
-.bc-dark            { border: 2px solid #050500}
+.bc-dark            { border: 2px solid #050500;}
 .light              { color: #fcfcfa;}
 .bg-light           { background-color: #fcfcfa;}
-.bc-light           { border: 2px solid #fcfcfa}
+.bc-light           { border: 2px solid #fcfcfa;}
 .grey               { color: #858583;}
 .bg-grey            { background-color: #858583;}
-.bc-grey            { border: 2px solid #858583}
+.bc-grey            { border: 2px solid #858583;}
 
 /* Hazard colors */
 
 .warning            { color: #f20505;}
-.bg-warning         { background-color: #f20505}
-.bc-warning         { border: 2px solid #f20505}
+.bg-warning         { background-color: #f20505;}
+.bc-warning         { border: 2px solid #f20505;}
 .hazard             { color: #f2ea05;}
 .bg-hazard          { background-color: #f2ea05;}
-.bc-hazard          { border: 2px solid #f2ea05}
+.bc-hazard          { border: 2px solid #f2ea05;}
 
 /* Primary color palet */
 
@@ -253,40 +253,40 @@ dd {
 .bc-red             { border: 2px solid #610a11;}
 .purple             { color: #4a0a61;}
 .bg-purple          { background-color: #4a0a61;}
-.bc-purple          { border: 2px solid #4a0a61}
+.bc-purple          { border: 2px solid #4a0a61;}
 .orange             { color: #73240b;}
-.bg-orange          { background-color: #73240b}
-.bc-orange          { border: 2px solid #73240b}
+.bg-orange          { background-color: #73240b;}
+.bc-orange          { border: 2px solid #73240b;}
 .yellow             { color: #a39e10;}
 .bg-yellow          { background-color: #a39e10;}
-.bc-yellow          { border: 2px solid #a39e10}
+.bc-yellow          { border: 2px solid #a39e10;}
 .pink               { color: #a12596;}
 .bg-pink            { background-color: #a12596;}
-.bc-pink            { border: 2px solid #a12596}
+.bc-pink            { border: 2px solid #a12596;}
 
 /* Pastel color palet */
 
 .p-blue             { color: #9bf6ff;}
 .bg-p-blue          { background-color: #9bf6ff;}
-.bc-p-blue          { border: 2px solid #9bf6ff}
+.bc-p-blue          { border: 2px solid #9bf6ff;}
 .p-green            { color: #caffbf;}
 .bg-p-green         { background-color: #caffbf;}
-.bc-p-green         { border: 2px solid #caffbf}
+.bc-p-green         { border: 2px solid #caffbf;}
 .p-red              { color: #ffadad;}
 .bg-p-red           { background-color: #ffadad;}
-.bc-p-red           { border: 2px solid #ffadad}
+.bc-p-red           { border: 2px solid #ffadad;}
 .p-purple           { color: #bdb2ff;}
 .bg-p-purple        { background-color: #bdb2ff;}
-.bc-p-purple        { border: 2px solid #bdb2ff}
+.bc-p-purple        { border: 2px solid #bdb2ff;}
 .p-orange           { color: #ffd6a5;}
 .bg-p-orange        { background-color: #ffd6a5;}
-.bc-p-orange        { border: 2px solid #ffd6a5}
+.bc-p-orange        { border: 2px solid #ffd6a5;}
 .p-yellow           { color: #fdffb6;}
 .bg-p-yellow        { background-color: #fdffb6;}
-.bc-p-yellow        { border: 2px solid #fdffb6}
+.bc-p-yellow        { border: 2px solid #fdffb6;}
 .p-pink             { color: #ffc6ff;}
 .bg-p-pink          { background-color: #ffc6ff;}
-.bc-p-pink          { border: 2px solid #ffc6ff}
+.bc-p-pink          { border: 2px solid #ffc6ff;}
 
 
 
