--- a/css/break-room.css
+++ b/css/break-room.css
@@ -241,15 +241,17 @@ See colors section for adding borders */
 .grey               { color: #858583;}
 .bg-grey            { background-color: #858583;}
 .bc-grey            { border: 2px solid #858583;}
+.white              { color: #fff;}
+.bg-white           { background-color: #fff;}
+.bc-white           { border: 2px solid #fff;}
 
 /* Hazard colors */
-
-.warning            { color: #f20505;}
-.bg-warning         { background-color: #f20505;}
-.bc-warning         { border: 2px solid #f20505;}
-.hazard             { color: #f2ea05;}
-.bg-hazard          { background-color: #f2ea05;}
-.bc-hazard          { border: 2px solid #f2ea05;}
+.danger             { color: #cc0f35;}
+.bg-danger          { background-color: #cc0f35;}
+.bc-danger          { border: 2px solid #cc0f35;}
+.warning            { color: #ffc409;}
+.bg-warning         { background-color: #ffc409;}
+.bc-warning         { border: 2px solid #ffc409;}
 
 /* Primary color palet */
 
@@ -306,6 +308,182 @@ See colors section for adding borders */
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+#button {
+    font-size: 1.5rem;
+}
+
+#button .section {
+    margin-top: 30px;
+}
+
+div.button-example {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: .5rem;
+    gap: 10px;
+}
+
+.button {
+    justify-content: center;
+    text-align: center;
+    padding: calc(.5em - 1px) 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.6rem;
+    box-shadow: 0 1px 3px 0, rgba(0, 0, 0, 0.1), 0 1px 2px 0, rgba(0, 0, 0, 0.6);
+    font-weight: 530;
+}
+
+.button:hover {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    transform: translateY(-3px);
+    transition: all .3s ease;
+  }
+  
+.button:active {
+    transform: translateY(3px);
+    transition: .4s;
+    opacity: .75;
+    transition: all .3s ease;
+} 
+
+/* size */
+.xsm-btn { font-size: 1.2rem; }
+
+.sm-btn { font-size: 1.6rem; }
+
+.md-btn { font-size: 2rem; }
+
+.lg-btn { font-size: 2.4rem; }
+
+/* display */
+.btn-fullwidth {
+    display: flex;
+    width: 100%;
+}
+
+/* color */
+.btn-white {
+    background-color: #fff;
+    color: #050500;
+}
+
+.btn-light {
+    background-color: #f4f5f8;
+    color: #858583;
+}
+
+.btn-dark {
+    background-color: #858583;
+    color: #fcfcfa;
+}
+
+.btn-black {
+    background-color: #050500;
+    color: #fff;
+}
+
+.btn-primary {
+    background-color: #3880ff;
+    color: #fcfcfa;
+}
+
+.btn-info {
+    background-color: #3dc2ff;
+    color: #fcfcfa;
+}
+
+.btn-success {
+    background-color: #2dd36f;
+    color: #fcfcfa;
+}
+
+.btn-warning {
+    background-color: #ffc409;
+    color: #fcfcfa;
+}
+
+.btn-danger {
+    background-color: #cc0f35;
+    color: #fcfcfa;
+}
+
+
+.btn-primary.btn-light-bg {
+    background-color: #fefefe;
+    color: #3880ff;
+    border: solid 1.5px #3880ff;
+}
+
+.btn-info.btn-light-bg {
+    background-color: #fefefe;
+    color: #3dc2ff;
+    border: solid 1.5px #3dc2ff;
+}
+
+.btn-success.btn-light-bg {
+    background-color: #fefefe;
+    color: #2dd36f;
+    border: solid 1.5px #2dd36f;
+}
+
+.btn-warning.btn-light-bg {
+    background-color: #fefefe;
+    color: #ffc409;
+    border: solid 1.5px #ffc409;
+}
+
+.btn-danger.btn-light-bg {
+    background-color: #fefefe;
+    color: #cc0f35;
+    border: solid 1.5px #cc0f35;
+}
+
+
+.button.submit-btn {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    transition: .3s;
+    color: #063970;
+    background-color: #fcfcfa;
+    border: solid 2px #063970;
+    font-weight: 600;
+    letter-spacing: .8px;
+}
+
+.button.submit-btn:hover {
+    background-color: #063970;
+    color: #fcfcfa;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+.button.submit-btn:hover i {
+    animation: arrow-right ease 2s infinite;
+}
+
+@keyframes arrow-right {
+    0% { transform: translateX(0); }
+    30% { transform: translateX(7px); }
+}
+
+.button.reset-btn {
+    transition: .3s;
+    color: #cc0f35;
+    background-color: #fcfcfa;
+    border: solid 2px #cc0f35;
+    font-weight: 600;
+    letter-spacing: .8px;
+}
+
+.button.reset-btn:hover {
+    background-color: #cc0f35;
+    color: #fcfcfa;
+    font-weight: 700;
+    text-shadow: 2px 2px 4px #000000;
+}
 
 /* Grid System
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
