--- a/css/break-room.css
+++ b/css/break-room.css
@@ -200,6 +200,25 @@ dd {
 .m5 { margin: 2.0rem; }
 .m-auto { margin:auto; }
 
+/* START: TRISH CHANGED SUNDAY MAY 29 4 PM */
+/* 
+.m0t { margin-top: 0; }
+.m1t { margin-top: .25rem; }
+.m2t { margin-top: .5rem; }
+.m3t { margin-top: 1.0rem; }
+.m4t { margin-top: 1.5rem; }
+.m5t { margin-top: 2.0rem; }
+
+.m0r { margin-top: 0; }
+.m1r{ margin-top: .25rem; }
+.m2r { margin-top: .5rem; }
+.m3r { margin-top: 1.0rem; }
+.m4r { margin-top: 1.5rem; }
+.m5r { margin-top: 2.0rem; }
+
+
+
+
 .p0 { padding: 0; }
 .p1 { padding: .25rem; }
 .p2 { padding: .5rem; }
@@ -221,11 +240,11 @@ See colors section for adding borders */
 
 
 /* Shadows
-
+/* TRISH CHANGED NAME from shadows to shadow  */
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.shadows-sm { box-shadow: 0 1px 3px 0, rgba(0, 0, 0, 0.1), 0 1px 2px 0, rgba(0, 0, 0, 0.6);}
-.shadows-md { box-shadow: 0 4px 6px -1px, rgba(0, 0, 0, 0.1),0 2px 4px -1px, rgba(0, 0, 0, 0.6);}
-.shadows-lg { box-shadow: 0 10px 15px -3px, rgba(0, 0, 0, 0.1),0 4px 6px -2px, rgba(0, 0, 0, 0.5);}
+.shadow-sm { box-shadow: 0 1px 3px 0, rgba(0, 0, 0, 0.1), 0 1px 2px 0, rgba(0, 0, 0, 0.6);}
+.shadow-md { box-shadow: 0 4px 6px -1px, rgba(0, 0, 0, 0.1),0 2px 4px -1px, rgba(0, 0, 0, 0.6);}
+.shadow-lg { box-shadow: 0 10px 15px -3px, rgba(0, 0, 0, 0.1),0 4px 6px -2px, rgba(0, 0, 0, 0.5);}
 
 
 /* Colors
@@ -961,6 +980,3 @@ a.navbar-item.active {
 /* Very Large Devices */
 @media (min-width: 1200px) {}
 
-
-/* Trish testing new rep connection - please delete this too */
-/* Please delete it later */
