--- a/css/break-room.css
+++ b/css/break-room.css
@@ -320,12 +320,14 @@ See colors section for adding borders */
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
+    color: #3880ff;
     text-decoration: none;
-    font-size: .3rem;
+    font-size: 1rem;
 }
 a:hover {
+    color: #2dd36f;
     text-decoration: none;
-    font-size: .3rem;
+    font-size: 1.25rem;
 }
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
